@@ -1,7 +1,6 @@
 package com.knockoutticket.backend.business.impl;
 
 import com.knockoutticket.backend.business.GetAllBoxersUseCase;
-import com.knockoutticket.backend.domain.models.Boxer;
 import com.knockoutticket.backend.domain.responses.GetBoxerResponse;
 import com.knockoutticket.backend.persistence.BoxerRepository;
 import com.knockoutticket.backend.persistence.entity.BoxerEntity;
@@ -9,7 +8,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @AllArgsConstructor
@@ -22,6 +21,6 @@ public class GetAllBoxersUseCaseImpl implements GetAllBoxersUseCase {
         return allBoxers.stream()
                 .map(BoxerConverter::toBoxerDTO)
                 .map(GetBoxerResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
